==> SreedharanNandu/EmbeddedProjects/Amul_Box_Fm/Amul_Box_Fm_Radio4/PIC24FJGB64002_Si4703/source/Application/radio.c <==
#include "radio.h"
#include "buttons.h"
#include "i2c.h"
#include <stdio.h>
#include <string.h>
#include "io.h"
#include "timer.h"
#include "led.h"
#include "uart.h"
#include "rotary.h"
#include "types.h"
#include "hardware.h"
#include "memory.h"
#include "const.h"
#define FIRST_ALLOWED_CHAR (0x20)
#define LAST_ALLOWED_CHAR (0x7f)

void Init_Si(void)
{
  /*
   To  use  this  busmode
   selection  method,  the  GPIO3  and  SDIO  pins  must  be
   sampled low by the device on the rising edge of RST.
   
   The user may either drive the GPIO3 pin low externally,
   or leave the pin floating. If the pin is not driven by the
   user,  it  will be pulled low  by an  internal  1 M?  resistor
   which  is  active  only  while  RST  is  low.  The  user  must
   drive the SEN and SDIO pins externally to the proper
   state.
   
   To  select  2-wire  operation,  the  SEN  pin  must  be
   sampled high by the device on the rising edge of RST.   */
   
   //SDI (SDA) must be LOW as per data sheet 
   _RB9 = 0; InsertDelay(100);
   Delay_Ms(200u);
   //si in reset state
   si4703_Rst(0); InsertDelay(100);
   //make RSEN High
   si4703_Rsen(1);InsertDelay(100);
   Delay_Ms(100u);
   //out of reset    
   si4703_Rst(1);InsertDelay(100);
   Delay_Ms(100u);
   //Reconfigure to I2C SDA pin
   _RB9 = 1;InsertDelay(100);
   Init_I2C();

   Delay_Ms(300u);//Reconfigure delay for I2C
   Power_Radio();
   Is_Manual_Tune = 0;
   power_state = ON_STATE;
}

static void Write_si4703(void)
{
   unsigned char data_wr[12];
  
   data_wr[0] = si4703_read_reg.powercfg>>8;
   data_wr[1] = (unsigned char)si4703_read_reg.powercfg;
   data_wr[2] = si4703_read_reg.channel>>8;
   data_wr[3] = (unsigned char)si4703_read_reg.channel;
   data_wr[4] = si4703_read_reg.sysconfig1>>8;
   data_wr[5] = (unsigned char)si4703_read_reg.sysconfig1;
   data_wr[6] = si4703_read_reg.sysconfig2>>8;
   data_wr[7] = (unsigned char)si4703_read_reg.sysconfig2;
   data_wr[8] = si4703_read_reg.sysconfig3>>8;
   data_wr[9] = (unsigned char)si4703_read_reg.sysconfig3;
   data_wr[10] = si4703_read_reg.test1>>8;
   data_wr[11] = (unsigned char)si4703_read_reg.test1;
   SendI2C1(SI_SLAVE_ADDRESS,(unsigned char*)&data_wr[0],12u);
   
}

void Read_si4703(void)
{
    volatile unsigned char data_rd[32];

    ReadI2C1(SI_SLAVE_ADDRESS,(unsigned char*)&data_rd[0],32u);

    si4703_read_reg.statusrssi     = (data_rd[0]<<8)|data_rd[1]; 
    si4703_read_reg.readchan       = (data_rd[2]<<8)|data_rd[3]; 
    si4703_read_reg.rdsa           = (data_rd[4]<<8)|data_rd[5]; 
    si4703_read_reg.rdsb           = (data_rd[6]<<8)|data_rd[7]; 
    si4703_read_reg.rdsc           = (data_rd[8]<<8)|data_rd[9]; 
    si4703_read_reg.rdsd           = (data_rd[10]<<8)|data_rd[11]; 
    si4703_read_reg.device_id      = (data_rd[12]<<8)|data_rd[13]; 
    si4703_read_reg.chipid         = (data_rd[14]<<8)|data_rd[15];
    si4703_read_reg.powercfg       = (data_rd[16]<<8)|data_rd[17];
    si4703_read_reg.channel        = (data_rd[18]<<8)|data_rd[19];
    si4703_read_reg.sysconfig1     = (data_rd[20]<<8)|data_rd[21];
    si4703_read_reg.sysconfig2     = (data_rd[22]<<8)|data_rd[23];
    si4703_read_reg.sysconfig3     = (data_rd[24]<<8)|data_rd[25];
    si4703_read_reg.test1          = (data_rd[26]<<8)|data_rd[27];
    si4703_read_reg.test2          = (data_rd[28]<<8)|data_rd[29];
    si4703_read_reg.bootconfig     = (data_rd[30]<<8)|data_rd[31];
}

void Radio_Enc_Button(unsigned char duration)
{
   if(power_state == ON_STATE)
   {
      if(duration == SHORT_PRESS)
      {
         preset_mode = !preset_mode;
         if(preset_mode)
         {
            UART_Printf(SEND_PRESET);
            UART_Printf(SEND_CH);
            fm_freq = K_Radio_Data_Read[preset_index];
         }
         else
         {
            UART_Printf(SEND_MANUAL);
         }
         UART_Printf(SEND_FREQ);
         Is_Manual_Tune = 1;
         Start_LED(LED_B,BLINK_ON,1,(unsigned long)50,(unsigned long)50,TURN_ON,1);
      }
      else if(duration == LONG_PRESS)
      {
         K_Radio_Data_Write[preset_index] = fm_freq;
         K_Radio_Data_Read[preset_index] = K_Radio_Data_Write[preset_index];
         ee_state = UPDATE_EE;
         preset_mode = 1u;
         UART_Printf(SEND_FREQ);
         UART_Printf(SEND_SAVED);
         UART_Printf(SEND_CH);
         Start_LED(LED_B,BLINK_ON,1,(unsigned long)500,(unsigned long)10,TURN_ON,1);
      }
      else
      {
      
      }
   }
}

void Process_App_Si(void)
{
   static unsigned char disp_st_timer;
   static unsigned char prev_power_state;
   static unsigned char prev_fm_stereo;
   static unsigned char Scan_Cnt;
   static unsigned char first_time_power_up;
   
   switch(radio_state)
   {
      case RADIO_RUNNING:
           if(power_state == OFF_STATE)
           {
              radio_state = RADIO_OFF;
              Set_Vol(SI_VOL_MUTE);
              Set_GPIO2(0);//Blue Led Power OFF
              UART_Printf(SEND_PWR_OFF);
           }
           else if(power_state == ON_STATE)
           {
              if(volume_mode)
              {
                 if(reset_Vol_Timer > 0u)
                 {
                    reset_Vol_Timer--;
                 }
                 if(!reset_Vol_Timer)
                 {
                    volume_mode = 0u;
                 }
              }    
              if(Is_Vol_Changed)
              {

                 Set_Vol(si_vol);
                 Is_Vol_Changed = 0u;
              }
              
              if(Is_Manual_Tune)
              {
                 Set_Fm_Tune_Freq(fm_freq);
                 Is_Manual_Tune = 0;
                 fm_stereo = 0;
              }
              else
              {
                 Scan_Cnt++;
                 if(Scan_Cnt == 10u)
                 {
                    Scan_Cnt = 0u;
                    Read_si4703();
                    if(Get_Fm_Tune_Status() & 0x0100U)
                    {
                      fm_stereo = 1;
                    }
                    else
                    {
                      fm_stereo = 0;
                    }
                    if(prev_fm_stereo != fm_stereo)
                    {
                       disp_st_timer = 4;
                       prev_fm_stereo = fm_stereo;
                    }
                    if(disp_st_timer != 0u)
                    {
                       disp_st_timer--;
                    }
                 }
              }
              if(prev_fm_freq != fm_freq)
              {
                 prev_fm_freq = fm_freq;
              }
           }
           break;   
      case RADIO_INIT:
           if(power_state == ON_STATE)
           {
              if(App_Si_EE_Check_Pending)
              {
                 App_Si_EE_Check_Pending = 0u;
                 Validate_FM_Data();
              }
              si_vol = SI_VOL_SET;
              if(!first_time_power_up)
              {
                 first_time_power_up = 1;
                 fm_freq = K_Radio_Data_Read[preset_index];
              }
              Set_Fm_Tune_Freq(fm_freq);
              preset_mode = 0u;               
              radio_state = RADIO_RUNNING;
              Is_Vol_Changed = 1;
              Set_GPIO2(1);//Blue Led Power ON
              UART_Printf(SEND_FREQ);
           }
           break;   
      default:
      case RADIO_OFF:
           if(power_state == ON_STATE)
           {
              radio_state = RADIO_INIT;
              UART_Printf(SEND_PWR_ON);
           }
           break;   
   }
   prev_power_state = power_state;
}
